force-app/main/default/objects/PersonEducation/fields/AHPRA_Website_Link__c.field-meta.xml
<CustomField>
    <fullName>AHPRA_Website_Link__c</fullName>
    <description>Displays link to AHPRA Website if Certification Type is &apos;AHPRA Registration Number&apos;</description>
    <formula>IF(Text(Certification__c) != null &amp;&amp; Text(Certification__c) == &apos;AHPRA Registration Number&apos;,HYPERLINK(&apos;https://www.nursingmidwiferyboard.gov.au/&apos;,&apos;AHPRA website link&apos;),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays link to AHPRA Website if Certification Type is &apos;AHPRA Registration Number&apos;</inlineHelpText>
    <label>AHPRA Website Link</label>
    <type>Text</type>
</CustomField>