force-app/main/default/objects/PersonEducation/fields/Certificate_Number__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Number__c</fullName>
    <label>Certification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>