force-app/main/default/objects/PersonEducation/fields/Certification__c.field-meta.xml
<CustomField>
    <fullName>Certification__c</fullName>
    <description>To provide relevant qualification for that roles and to the delivery of aged care and check if are suitable for the role</description>
    <inlineHelpText>For all AHPRA Registration Numbers, please use this link https://www.nursingmidwiferyboard.gov.au/ to validate the registration number</inlineHelpText>
    <label>Certification Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AHPRA Registration Number</fullName>
            </value>
            <value>
                <fullName>Chartered Accountant Registration Number</fullName>
            </value>
            <value>
                <fullName>RTO Registration Number</fullName>
            </value>
            <value>
                <fullName>CERT III/IV Number</fullName>
            </value>
            <value>
                <fullName>CERT II/IV Number</fullName>
                <isActive>false</isActive>
                <label>CERT II/IV Number</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>