force-app/main/default/objects/PersonEducation/fields/Contact_Person__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Credential</relationshipLabel>
    <relationshipName>Credential</relationshipName>
    <type>Lookup</type>
</CustomField>