force-app/main/default/objects/PersonEducation/fields/Date_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Date_Obtained__c</fullName>
    <label>Date Obtained</label>
    <type>Date</type>
</CustomField>