force-app/main/default/objects/PersonEducation/fields/Date_Started_if_still_studying__c.field-meta.xml
<CustomField>
    <fullName>Date_Started_if_still_studying__c</fullName>
    <label>Date Started (if still studying)</label>
    <type>Date</type>
</CustomField>