force-app/main/default/objects/PersonEducation/fields/Duplicate_Certificate__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Certificate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Certificate</label>
    <type>Checkbox</type>
</CustomField>