force-app/main/default/objects/PersonEducation/fields/Educational_Facility__c.field-meta.xml
<CustomField>
    <fullName>Educational_Facility__c</fullName>
    <label>Educational Facility</label>
    <length>255</length>
    <type>Text</type>
</CustomField>