force-app/main/default/objects/PersonEducation/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>Where applicable, please enter the certification end date/expiry date.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>