force-app/main/default/objects/PersonEducation/fields/Qualification_Name__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Name__c</fullName>
    <description>Identifies the qualification name of the individual.</description>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>