force-app/main/default/objects/PersonEducation/fields/Qualification_Number__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Number__c</fullName>
    <label>Qualification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>