force-app/main/default/objects/PersonEducation/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The ACQSC Act  Section 8A – 1A</fullName>
            </value>
            <value>
                <fullName>The ACQSC Act Section 8A – 1B</fullName>
            </value>
            <value>
                <fullName>The ACQSC Act Section 8A – 1C</fullName>
            </value>
            <value>
                <fullName>Refer 10A-1(1)(a)</fullName>
            </value>
            <value>
                <fullName>Refer 10A-A(1)(c)</fullName>
            </value>
            <value>
                <fullName>Refer 10A-A(1)(b)</fullName>
            </value>
            <value>
                <fullName>Refer 10A-1(1)(b)</fullName>
                <isActive>false</isActive>
                <label>Refer 10A-1(1)(b)</label>
            </value>
            <value>
                <fullName>Refer 10A-1(1)(c)</fullName>
                <isActive>false</isActive>
                <label>Refer 10A-1(1)(c)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>