force-app/main/default/objects/PersonEducation/recordTypes/Disqualification_Details.recordType-meta.xml
<RecordType>
    <fullName>Disqualification_Details</fullName>
    <active>true</active>
    <label>Unsuitability Details</label>
</RecordType>