force-app/main/default/objects/PersonEducation/recordTypes/Police_Record_Check.recordType-meta.xml
<RecordType>
    <fullName>Police_Record_Check</fullName>
    <active>true</active>
    <label>Police Record Check</label>
</RecordType>