force-app/main/default/objects/PersonEducation/validationRules/Credential_Certificate.validationRule-meta.xml
<ValidationRule>
    <fullName>Credential_Certificate</fullName>
    <active>false</active>
    <description>Duplicate Certificate Checking</description>
    <errorConditionFormula>Duplicate_Certificate__c</errorConditionFormula>
    <errorDisplayField>Certification__c</errorDisplayField>
    <errorMessage>Contact already has this certificate.</errorMessage>
</ValidationRule>