force-app/main/default/objects/PersonEducation/validationRules/Credential_DateObtained.validationRule-meta.xml
<ValidationRule>
    <fullName>Credential_DateObtained</fullName>
    <active>true</active>
    <description>Date Obtained cannot be a future date.</description>
    <errorConditionFormula>NOT(ISBLANK(Date_Obtained__c)) &amp;&amp; Date_Obtained__c&gt;TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Obtained__c</errorDisplayField>
    <errorMessage>Date Obtained cannot be a future date.</errorMessage>
</ValidationRule>