force-app/main/default/objects/PersonEducation/validationRules/Credential_DateObtained_DateStarted.validationRule-meta.xml
<ValidationRule>
    <fullName>Credential_DateObtained_DateStarted</fullName>
    <active>true</active>
    <description>Date Obtained or Date Started must be populated.</description>
    <errorConditionFormula>ISBLANK(Date_Obtained__c) &amp;&amp; ISBLANK(Date_Started_if_still_studying__c) &amp;&amp;
RecordType.DeveloperName = &apos;Certification&apos;</errorConditionFormula>
    <errorMessage>Please enter Date Obtained and/or Date Started.</errorMessage>
</ValidationRule>