force-app/main/default/objects/PersonEducation/validationRules/Credential_DateStarted.validationRule-meta.xml
<ValidationRule>
    <fullName>Credential_DateStarted</fullName>
    <active>true</active>
    <description>Date Started cannot be a future date.</description>
    <errorConditionFormula>NOT(ISBLANK(Date_Started_if_still_studying__c)) &amp;&amp; Date_Started_if_still_studying__c&gt;TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Started_if_still_studying__c</errorDisplayField>
    <errorMessage>Date Started cannot be a future date.</errorMessage>
</ValidationRule>