force-app/main/default/objects/PersonEducation/validationRules/Credential_DateStartedDateObtained.validationRule-meta.xml
<ValidationRule>
    <fullName>Credential_DateStartedDateObtained</fullName>
    <active>true</active>
    <description>Date Obtained must be after Date Started.</description>
    <errorConditionFormula>NOT(ISBLANK(Date_Started_if_still_studying__c)) &amp;&amp; 
NOT(ISBLANK(Date_Obtained__c)) &amp;&amp; 
Date_Started_if_still_studying__c&gt;Date_Obtained__c</errorConditionFormula>
    <errorMessage>Date Obtained must be after Date Started.</errorMessage>
</ValidationRule>