force-app/main/default/objects/PersonEducation/validationRules/Credential_QualificationNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>Credential_QualificationNumber</fullName>
    <active>true</active>
    <description>The Qualification Number should be numerical only.</description>
    <errorConditionFormula>AND(RecordType.DeveloperName = &apos;Qualification&apos;, !ISBLANK(Qualification_Number__c), NOT(REGEX(Qualification_Number__c, &quot;[0-9_+-]+&quot;)))</errorConditionFormula>
    <errorDisplayField>Qualification_Number__c</errorDisplayField>
    <errorMessage>The Qualification Number should be numerical only. Please enter a new value.</errorMessage>
</ValidationRule>