force-app/main/default/objects/PersonEducation/validationRules/Credential_ReferenceNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>Credential_ReferenceNumber</fullName>
    <active>true</active>
    <description>Reference Number should be numerical only.</description>
    <errorConditionFormula>AND(NOT($Setup.BypassTriggers__c.BypassValidationRules__c), (!ISBLANK( Reference_Number__c ) ),NOT(REGEX( Reference_Number__c , &quot;[0-9_+-]+&quot;)))</errorConditionFormula>
    <errorDisplayField>Reference_Number__c</errorDisplayField>
    <errorMessage>The Reference Number should be numerical only. Please enter a new value.</errorMessage>
</ValidationRule>