force-app/main/default/objects/PersonEducation/validationRules/Credential_RegisteredState.validationRule-meta.xml
<ValidationRule>
    <fullName>Credential_RegisteredState</fullName>
    <active>true</active>
    <description>Registered State is mandatory for AHPRA Registration certificate.</description>
    <errorConditionFormula>AND(
ISPICKVAL(Registered_State__c, &quot;&quot;),
ISPICKVAL(Certification__c,&apos;AHPRA Registration Number&apos;)
)</errorConditionFormula>
    <errorDisplayField>Registered_State__c</errorDisplayField>
    <errorMessage>Registered State is mandatory for AHPRA Registration certificate.</errorMessage>
</ValidationRule>